# garry-chess-dpo

./: .gitattributes  .gitignore  NOTICE  README.md  pyproject.toml
final_experiments_for_paper/experiment1/: README.md
final_experiments_for_paper/experiment1/paper_figures/: paper_figure_manifest.json
final_experiments_for_paper/experiment1/train_val_pgns_twic/: carlsen_train_dpo.jsonl  carlsen_val_dpo.jsonl  firouzja_train_dpo.jsonl  firouzja_val_dpo.jsonl  giri_train_dpo.jsonl  giri_val_dpo.jsonl  gukesh_train_dpo.jsonl  gukesh_val_dpo.jsonl  nakamura_train_dpo.jsonl  nakamura_val_dpo.jsonl  praggnanandhaa_train_dpo.jsonl  praggnanandhaa_val_dpo.jsonl  vincent_train_dpo.jsonl  vincent_val_dpo.jsonl  wei_train_dpo.jsonl  wei_val_dpo.jsonl
final_experiments_for_paper/experiment2_style_model/: README.md
final_experiments_for_paper/experiment2_style_model/eval_graphs_twic_single_gm/: paper_figure_manifest.json
final_experiments_for_paper/experiment2_style_model/filtered_pgns_twic_1k_plus/: manifest.txt
final_experiments_for_paper/experiment2_style_model/paper_plots_v2/: README_plot_story.txt
final_experiments_for_paper/experiment2_style_model/training_summary/: ablation_v1_phi0_tau0_05_bs2048__pair-v1__phi-phi0__edim-256__bs-2048__lr-0.0003__tau-0.05__seed-42.jsonl  ablation_v1_phi0_tau0_05_lr0_001__pair-v1__phi-phi0__edim-256__bs-4096__lr-0.001__tau-0.05__seed-42.jsonl  ablation_v1_phi0_tau0_05_lr0_01__pair-v1__phi-phi0__edim-256__bs-4096__lr-0.01__tau-0.05__seed-42.jsonl  ablation_v1_phi0_tau0_25_bs1024__pair-v1__phi-phi0__edim-256__bs-1024__lr-0.0003__tau-0.25__seed-42.jsonl  (+46 more)
final_experiments_for_paper/experiment3/: README.md
processed/single_gm/: magnus.pgn
processed/single_gm/train_val/: magnus_val.pgn  (+19 more)
(+1348 files in other folders)
